# Agu

./: .env.example  .gitignore  A股半自动交易辅助系统商业分析与系统设计.docx  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  sqlite_probe_root.db  sqlite_probe_root.db-journal  start_system_windows.bat  start_system_windows.bat - 快捷方式.lnk  tmp1.db-journal
deploy/: docker-compose.single-node.yml
docs/: applied_statistics_research_guide_zh.md  applied_statistics_retest_pitch_zh.md  architecture.md  deployment.md  doc_requirement_gap.md  docx_document_parsed.txt  docx_extracted_sections.txt  system_pretrade_checklist_zh.md  system_quick_start_10min_zh.md  system_user_guide_zh.md  tushare_2120_capability_map_zh.md
reports/: ab_multi_factor_expansion_akshare.json  ab_multi_factor_expansion_cache.json  ab_multi_factor_gridsearch_cache.json  buy_candidates_2000.csv  factor_selection_002175_large_sample.json  factor_selection_002175_large_sample_winsor.json  full_market_signals_2000.jsonl  full_market_summary_2000.json  sqlite_probe_rep.db-journal  tmp3.db-journal
scripts/: bootstrap.ps1  fix_test_cache_acl.ps1  full_market_pick_2000.py  run_api.ps1  run_full_market_2000.ps1  run_pipeline.ps1  run_tests.ps1
tests/: conftest.py  test_alert_service.py  test_applied_stats_api.py  test_applied_stats_service.py  test_applied_stats_ui.py  test_audit_chain.py  test_audit_store.py  test_autotune_service.py  test_backtest_engine.py  test_compliance_evidence.py  test_config_env_parsing.py  test_container_audit_recovery.py  test_data_cache.py  test_data_license.py  test_data_quality.py  (+45 more)
(+206 files in other folders)
